fixed some mobile spacing

--- a/src/assets/icons/logos.css
+++ b/src/assets/icons/logos.css
@@ -41,9 +41,9 @@ a:hover, .navbar-logo:hover {
 
 @media screen and (max-width: 1000px) {
 
-	.navbar-logo-opensea-dark path {
+	/* .navbar-logo-opensea-dark path {
 		fill: #fff !important;
-	}
+	} */
 }
 
 @media screen and (max-width: 540px) {
